# jellyfin-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  jellyfin-mcp-backend.spec  justfile  pyproject.toml  run_server.py  start.ps1
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIG.md  DEVELOPMENT.md  FAQ.md  INSTALL.md  JELLYFIN_SERVER.md  LIVE_TV.md  MCP_SETUP.md  PLEX_MIGRATION.md  PLUGINS.md  RAG.md  SAMPLING.md  TAURI.md  TOOLS.md  WEBAPP.md
mcpb/: README.md  manifest.json  run_server.py
mcpb/assets/prompts/: system.md  user.md
mcpb/src/: __main__.py  app.py  prefabs.py  server.py  transport.py
native/: .gitignore  Cargo.toml  build-sidecar.ps1  build.ps1  package.json  tauri.conf.json
native/capabilities/: default.json
native/icons/: icon.icns
native/src/: backend.rs  main.rs
native/windows/: hooks.nsh
scripts/: check_jellyfin.py  cua-nsis-config.json  cua-smoke.py  generate-tauri-icon.ps1  probe_api.py  probe_plugins.py
src/jellyfin_mcp/: __init__.py  app.py  config.py  prefabs.py  server.py  transport.py
src/jellyfin_mcp/models/: __init__.py
src/jellyfin_mcp/sampling/: __init__.py
src/jellyfin_mcp/services/: __init__.py  base.py  enrichment_service.py  jellyfin_service.py  plugin_service.py  rag_service.py  registry.py  websocket_service.py
src/jellyfin_mcp/tools/: __init__.py  agentic.py
src/jellyfin_mcp/tools/portmanteau/: __init__.py  arr_stack.py  collections.py  enrichment.py  ffmpeg.py  help.py  integration.py  library.py  livetv.py  media.py  metadata.py  playback.py  playlist.py  plugin.py  rag.py  recommend.py  reporting.py  search.py  server.py  streaming.py  subtitle.py  user.py
src/jellyfin_mcp/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_connection.py  test_libraries.py  test_media.py  test_plugins_server.py  test_rag.py  test_search.py  test_tools_misc.py  test_users_sessions.py
tests/unit/: test_app.py  test_config.py  test_jellyfin_service.py  test_service_registry.py  test_tools.py  test_transport.py
webapp/: e2e-start-backend.ps1  e2e_run_backend.py  start.ps1
webapp/backend/app/: config.py  jel.py  main.py
webapp/backend/app/api/: help_api.py  images.py  library.py  livetv.py  llm.py  media.py  playback.py  plugins.py  rag.py  search.py  server.py  settings.py  streaming.py  users.py  ws.py
webapp/frontend/: biome.json  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
webapp/frontend/app/: globals.css  layout.tsx  loading.tsx  overview-dashboard.tsx  overview-skeleton.tsx  page.tsx
webapp/frontend/app/chat/: page.tsx
webapp/frontend/app/help/: page.tsx
webapp/frontend/e2e/: chat.spec.ts  dashboard.spec.ts  fixtures.ts  full-journey.spec.ts  global-setup.ts  help.spec.ts  integrated-browser.spec.ts  libraries.spec.ts  livetv.spec.ts  media.spec.ts  navigation.spec.ts  playback.spec.ts  plugins.spec.ts  rag.spec.ts  search.spec.ts  settings.spec.ts  users.spec.ts  z-api-health.spec.ts
webapp/frontend/utils/: api.ts  jellyfin-media.ts
(+14 files in other folders)
